# stock-data-splitter

./: README.md
stock_splitter/: .gitignore  pyproject.toml
stock_splitter/src/stock_splitter/: stock_splitter.py
