[project]
name = "stock-splitter"
version = "0.1.0"
description = ""
authors = [
    {name = "maahma",email = "maahaahmad99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "stock_splitter", from = "src"}]

[tool.poetry.scripts]
stock_splitter = "stock_splitter.stock_splitter:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
